replace deprecated methods URL() to URL() in Java 20++